fix: spacing, dark mode and badges

--- a/src/style/common/mixins.less
+++ b/src/style/common/mixins.less
@@ -41,7 +41,7 @@
   .setVariables(foreground background);
   .setColorFade(foreground, @foreground);
   .setColorFade(background, @background);
-  .setVariables(blue-500 green-500 petrol-500 purple-500 red-500 amber-500);
+  .setVariables(blue-500 blue-600 blue-700 green-500 petrol-500 purple-500 red-500 amber-500);
   .setVariables(app-bg sidebar-bg sidebar-border-color main-color border-color app-bg-secondary conversation-list-bg-opacity);
   .setVariables(modal-bg modal-border-color);
   .setVariables(preference-account-input-bg);
@@ -371,4 +371,13 @@
   font-size: 11px;
   font-weight: @font-weight-bold;
   text-transform: uppercase;
+}
+
+.button-active() {
+  background-color: var(--blue-500);
+
+  body.theme-dark & {
+    border: 1px solid var(--blue-600);
+    background-color: var(--blue-700);
+  }
 }
